--- a/client/src/components/Testimonials/Testimonials.scss
+++ b/client/src/components/Testimonials/Testimonials.scss
@@ -6,18 +6,42 @@
     display: flex;
     flex-direction: column;
     gap: $space-x-small;
+    font-size: 1.4rem;
+    line-height: 1.7;
+
+    @include tablet {
+      font-size: 1.5rem;
+    }
   }
+
   &-title {
-    font-weight: 600;
+    font-size: 1.6rem;
+    font-weight: 700;
+    line-height: 1.3;
+
+    @include tablet {
+      font-size: 1.8rem;
+    }
   }
+
   &-name {
     font-weight: 600;
+    font-size: 1.3rem;
+    color: $main-teal;
+    font-style: italic;
   }
+
+  &-desc {
+    font-size: 1.2rem;
+    font-style: italic;
+    color: #6b7280;
+    line-height: 1.5;
+  }
+
   &-highlighted {
     font-weight: 600;
-  }
-  &-name,
-  &-desc {
-    font-style: italic;
+    color: $main-teal;
+    text-decoration: underline;
+    text-underline-offset: 0.2rem;
   }
 }
